--- a/local.properties
+++ b/local.properties
@@ -1,1 +1,2 @@
 sdk.dir=C\:\\Users\\Aliyan\\AppData\\Local\\Android\\Sdk
+ndk.dir=C\:\\Users\\Aliyan\\AppData\\Local\\Android\\Sdk\\ndk\\25.1.8937393
