--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@config-plugins/react-native-ble-plx": "^7.0.0",
     "@expo/config-plugins": "~8.0.0",
     "@expo/metro-runtime": "~3.2.3",
     "@expo/prebuild-config": "~7.0.0",
@@ -19,11 +20,10 @@
     "@react-navigation/stack": "^6.4.1",
     "@shopify/react-native-skia": "^1.2.3",
     "@types/react": "~18.2.79",
-    "eas-cli": "11.0.2",
+    "eas-cli": "^11.0.2",
     "expo": "~51.0.28",
     "expo-dev-client": "~4.0.25",
     "expo-device": "~6.0.2",
-    "expo-modules-autolinking": "~1.11.0",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
@@ -36,7 +36,11 @@
     "react-native-screens": "^3.31.1",
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.2.0",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-vector-icons": "^10.1.0",
+    "react-native-vision-camera": "^4.5.2",
+    "twrnc": "^4.5.1",
+    "typescript": "~5.3.3",
+    "expo-media-library": "~16.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
